--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-pydantic>=1.8.0
+pydantic>=2.0.0
 click>=8.0.0
-mypy>=0.910
+mypy>=1.0.0
 pylint>=2.9.0
 bandit>=1.7.0
 safety>=2.0.0
+pyyaml>=6.0.0
+watchdog>=3.0.0
